# CrayonRenderer

./: CMakeLists.txt  CrayonApp.h  CrayonApp.mm  CrayonRenderer.cpp  CrayonRenderer.h  DefaultMaterials.h  Material.cpp  Material.h  README.md  backgroundComposite.frag  blendpressures.cpp  crayonDataGenerator.cpp  crayonDemo.cpp  crayonPreprocess.cpp  crayonPreprocess.h  drawpass.frag  eraser.frag  eraser.vert  icon.frag  median.cpp  passthrough.vert  passthrough2.vert  passthrough3.vert  quad.frag  swatch.cpp
